traefik/traefik-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: default    # mudar
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
        name: traefik
    spec:
      serviceAccountName: traefik-service-account
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik
        ports:
        - name: web
          containerPort: 80
        - name: dashboard
          containerPort: 8080
        args:
          # Configuration (update here)
          - --api.insecure
          - --providers.kubernetesingress
          - --log.level=DEBUG
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
