traefik/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: gic-group-6
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/whitelist-source-range: "110.10.0.0/24"
spec:
  rules:
  - host: gic-group-6.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port: 
              number: 4200
  - host: django.gic-group-6.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port: 
              number: 8000
